Setup tweeter + add nav bar

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,9 +17,36 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: "Source Sans 3", sans-serif;
   font-size: 24px;
+}
+
+nav {
+  display: flex;
+  align-items: end;
+  color:#FFFFFF;
+  background-color: #4056A1;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+  padding-bottom: 1.5em;
+  height: 120px; 
+  box-sizing: border-box;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ #logo {
+  font-family: "Bungee", sans-serif;
+  font-size: 24px;
+ }
+
+ .write-tweet-nav {
+  margin-left: auto;
+ }
+
+ #write-tweet-icon {
+  display: flex;
+  justify-content: center;
+ }
