--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,14 +1,17 @@
 .new-tweet {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   background-color: #ebe4da;
   position: relative;
-  width: 50%;
+  width: 80%;
+  padding: 0px 20px 0px 20px;
 }
 
 #tweet-button {
   font-family: "Bungee", sans-serif;
+  font-size: 1em;
+  padding: 20px 20px 20px 0px;
 }
 
 #tweet-button button {
@@ -19,6 +22,7 @@
 #tweet-button .counter {
   position: absolute;
   right: 0;
+  padding: 0px 20px 20px 20px;
 }
 
 #tweet-text {
@@ -27,6 +31,6 @@
   border: none;
   border-bottom: solid;
   background-color: #ebe4da;
-  width: 150%;
-  margin-top: -2em;
+  width: 100%;
+  height: 1.75em;
 }
