--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -7,21 +7,70 @@
 
 .tweet {
   border: solid;
-  justify-content: flex-start;
-  align-items: flex-start;
+  margin: 0px 0px 25px 0px;
 }
 
 .tweet:hover {
-  box-shadow: 6px 1.5px 1.5px lightgray;
+  box-shadow: 7px 7px 0px 0px lightgray;
 }
 
 article.tweet header {
   display: flex;
+  flex-direction: row;
   background-image: none;
   background-color: #ebe4da;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   padding: 0px 0px 0px 0px;
   margin-top: 0px;
   height: 100%;
+}
+
+article.tweet header {
+  display: flex;
+  flex-direction: row;
+  background-image: none;
+  background-color: #ebe4da;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0px 0px 0px 35px;
+  margin-top: 0px;
+  gap: 15px;
+  height: 100%;
+}
+
+article.tweet header .user-handle {
+  display: flex;
+  padding: 0px 0px 0px 27em;
+  font-size: 36px;
+  color: silver;
+  opacity: .6;
+}
+
+article.tweet footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 25px 25px 25px;
+  border-top: 4px solid;
+  margin: 10px;
+}
+
+article.tweet footer time {
+  font-size: 25px;
+}
+
+article.tweet .icons {
+  display: flex;
+  gap: 10px;
+}
+
+article.tweet .fa-solid.fa-flag:hover, article.tweet .fa-solid.fa-retweet:hover, article.tweet .fa-solid.fa-heart:hover {
+  color: darkgoldenrod;
+  cursor: pointer;
+}
+
+article.tweet p.tweet-content {
+  font-weight: bold;
+  padding: 20px 0px 20px 35px;
 }
