Implement error msg box

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -5,6 +5,11 @@
   width: 80%;
 }
 
+p.error-message {
+  border: 3.5px solid red;
+  padding: 20px 20px 20px 20px;
+}
+
 .tweet {
   border: solid;
   margin: 0px 0px 25px 0px;
