--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,10 +27,23 @@ main {
   width: 90%;
   flex-direction: column;
   align-items: center;
-  position: absolute;
+  position: relative;
   left: 5%;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ @media screen and (min-width: 1024px) {
+   body {
+    display: flex;
+    flex-direction: row;
+    background-color: #ebe4da;
+   }
+
+   main {
+    background-color: #ebe4da;
+    padding: 7em 0px 0px 0px;
+   }
+ }
