--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: stretch;
   background-color: #ebe4da;
-  position: relative;
+  position: unset;
   width: 80%;
   padding: 0px 20px 0px 20px;
 }
@@ -22,7 +22,7 @@
 #tweet-button .counter {
   position: absolute;
   right: 0;
-  padding: 0px 20px 20px 20px;
+  padding: 0em 4em 1em 0em;
 }
 
 #tweet-text {
@@ -33,4 +33,12 @@
   background-color: #ebe4da;
   width: 100%;
   height: 1.75em;
+}
+
+@media screen and (min-width: 1024px) {
+  #tweet-button .counter {
+    position: inherit;
+    right: 0;
+    padding: 0px 0px 0px 37em;
+  }
 }
